--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ index: true
             </div>
             <!-- SideBar -->
             <div class="col-md-3">
-
+              <h3> All Historical Posts</h3>
               {% for post in site.posts %}
               <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
               <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . <a href="http://erjjones.github.com{{ post.url }}#disqus_thread"></a></small></p>
